--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,12 +2,13 @@
 name = "SiD2ReGenerator"
 version = "0.1.1"
 description = "The SiD2ReGenerator Python project"
-license = "MIT"
+license = "BSD-3-Clause"
 authors = ["B. Stratmann <benedikt.stratmann@iosb.fraunhofer.de>"]
 maintainers = ["B. Stratmann <benedikt.stratmann@iosb.fraunhofer.de>"]
 readme = "README.md"
 # The project homepage, e.g. Gitlab pages
-homepage = "https://github.com/FraunhoferIOSB/SiD2Re"
+# homepage = ""
+repository = "https://github.com/FraunhoferIOSB/SiD2Re"
 # The project documentation, e.g. Gitlab pages
 # documentation = ""
 keywords = ["tool", "ml"]
@@ -23,7 +24,7 @@ classifiers = [# Optional
     # 'Topic :: Software Development :: Build Tools',
 
     # Pick your license as you wish
-    'License :: OSI Approved :: MIT License',
+    'License :: OSI Approved :: BSD-3-Clause',
     # Specify the Python versions you support here. In particular, ensure
     # that you indicate you support Python 3. These classifiers are *not*
     # checked by 'pip install'. See instead 'python_requires' below.
@@ -46,6 +47,7 @@ packages = [
 Homepage = "https://github.com/FraunhoferIOSB/SiD2Re"
 Issues = "https://github.com/FraunhoferIOSB/SiD2Re/issues"
 Paper = "https://ieeexplore.ieee.org/document/10218255"
+
 [tool.poetry.dependencies]
 python = "^3.8"
 scikit-learn = "^1.2.1"
