--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ classifiers = [# Optional
     # 'Topic :: Software Development :: Build Tools',
 
     # Pick your license as you wish
-    'License :: OSI Approved :: BSD-3-Clause',
+    'License :: OSI Approved :: BSD License',
     # Specify the Python versions you support here. In particular, ensure
     # that you indicate you support Python 3. These classifiers are *not*
     # checked by 'pip install'. See instead 'python_requires' below.
