--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "SiD2ReGenerator"
-version = "0.1.1"
+version = "0.1.2a0"
 description = "The SiD2ReGenerator Python project"
 license = "BSD-3-Clause"
 authors = ["B. Stratmann <benedikt.stratmann@iosb.fraunhofer.de>"]
