--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,7 +9,7 @@ variables:
     CI_RUNNER_TAG_COMMON: 'icps'
     CI_REPO_TOKEN_NAME: $CI_REPO_TOKEN_NAME
     CI_REPO_TOKEN_VALUE: $CI_REPO_TOKEN_VALUE
-    CI_PRIVATE_TOKEN: $CI_ACCESS_TOKEN
+    CI_PRIVATE_TOKEN: $CI_REPO_ACCESS_TOKEN
     POETRY_VERSION: 1.8.3
     PYTHON_VERSION: 38
     CODE_SRC_DIR: src
